0.9.3:
 -

0.9.2: 
 - block device transfer support
 - character device transfer support
 - fifo transfer support

0.9.1:
 - Document write
 - fixed encrypt function
 - fixed console password function
 - create msync command

0.9.0beta:
 - initial release