@@ -1,5 +1,6 @@
 0.9.3:
- -
+ - change msync command design.
+ - fixed daemonize error message.
 
 0.9.2: 
  - block device transfer support
